--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* error styling for challenge #2 */
+.error {
+  font-size: 150%;
+  color: red;
+}
+
+/* for challenge #2 and #3 to show / hide error message */
+.hidden {
+  display: none;
+}
